# MultiAgentCrossReview

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CyphenEngine_DevArticle_01_RefactorBranch_Draft.md  CyphenEngine_DevArticle_02_RendererModule_Draft.html  CyphenEngine_DevArticle_02_RendererModule_Draft.md  CyphenEngine_DevArticle_02_RendererModule_Styled.html  CyphenEngine_README_2026-07-02.md  CyphenEngine_README_v3merged.md  HANDOFF.md  LICENSE  PR-1-Refactor.md  README.md  devlog-26.06.19.patch  grep.exe.stackdump  sync.cmd  sync.ps1
BuildArtifacts/Binaries/x64/Debug/: CyphenRendererDx11.exp  CyphenRendererDx11.lib
BuildArtifacts/Binaries/x64/Debug/Resources/Test/CoreIo/: ReadAllText_UTF8_LF.txt
BuildArtifacts/Binaries/x64/Release/: CyphenRendererDx11.exp
Claud/: ROLE.md
Codex/: ROLE.md
Common/: PROJECT_RULES.template.md  ROUTING.md  SHARED_RULES.md
Projects/: projects.example.json  projects.json
Reviews/: README.md  run-review.ps1
Reviews/2026-06-22_RendererCommandStream/: README.md
Reviews/2026-06-22_RendererCommandStream/Claud/: Q001_003_cross_review.md  Q001_008_evidence_check.md  Q001_009_revision.md
Reviews/2026-06-22_RendererCommandStream/Codex/: .keep
Reviews/2026-06-22_RendererCommandStream/Decision/: .keep
Reviews/2026-06-22_RendererCommandStream/Evidence/: .keep
Reviews/2026-06-22_RendererCommandStream/Questions/: Q001.md
Reviews/2026-06-22_RendererModuleContract/: README.md
Reviews/2026-06-22_RendererModuleContract/Claud/: Q001_003_cross_review_codex.md
Reviews/2026-06-22_RendererModuleContract/Codex/: Q001_001_contract_revision.md  Q001_002_naming_revision.md  Q001_004_cross_review_claude.md  Q001_005_revision.md  Q001_007_evidence_check.md  Q001_009_evidence_check.md  Q002_001_design_checkpoint.md  Q002_002_devlog_draft.md
Reviews/2026-06-22_RendererModuleContract/Decision/: Q001_decision.md
Reviews/2026-06-22_RendererModuleContract/Questions/: Q001.md  Q002.md
Reviews/2026-06-23_ProfileTextureBootstrap/: README.md
Reviews/2026-06-23_ProfileTextureBootstrap/Callbacks/: Q001_C001_user.md  Q001_C002_user.md
Reviews/2026-06-23_ProfileTextureBootstrap/Claud/: Q001_005_cross_review_codex.md  Q001_008_recross_review_codex.md  Q001_025_catchup_cross_review_content_codec.md  Q001_026_catchup_resource_layer_and_upload_ir.md  Q001_027_locked_implementation_draft.md  Q001_028_thread_command_architecture_lock.md
Reviews/2026-06-23_ProfileTextureBootstrap/Codex/: Q001_001_initial.md  Q001_003_revision_after_callback.md  Q001_004_cross_review_claude.md  Q001_006_revision_after_cross_review.md  Q001_007_recross_review_after_c002.md  Q001_012_implementation_correction.md  Q001_014_type_unification_after_threading_review.md  Q001_015_codec_scope_correction.md  Q001_016_skull_codec_switch_table.md  Q001_017_codec_direct_call_is_temporary.md  Q001_018_codec_rename_confirmed.md  Q001_019_codec_leaf_stb_now_turbo_later.md  Q001_020_codec_platform_leaf_final.md  Q001_021_full_2_6_implementation_draft.md  Q001_022_content_codec_location_revision.md  Q001_023_bool_naming_correction.md  Q001_024_devlog_draft.md
Reviews/2026-06-23_ProfileTextureBootstrap/Decision/: Q001_decision.md
Reviews/2026-06-23_ProfileTextureBootstrap/Questions/: Q001.md
Reviews/2026-06-25_LinuxBringup/: README.md
Reviews/2026-06-25_LinuxBringup/Callbacks/: Q001_C001_user.md
Reviews/2026-06-25_LinuxBringup/Claud/: Q001_001_b3_plan.md  Q001_002_renderer_backend_lock.md  Q001_003_mirror_audit.md  Q001_004_vulkan_scaffold_build_pass.md
Reviews/2026-06-25_LinuxBringup/Claud/artifacts/: 26.06.25_2.txt  commit_3_1.txt
Reviews/2026-06-25_LinuxBringup/Claud/artifacts/CyphenRendererVulkan/: CyphenRendererVulkan.vcxproj  VulkanRenderer.cpp  VulkanRenderer.h  VulkanRendererModule.cpp
Reviews/2026-06-25_LinuxBringup/Questions/: Q001.md
Reviews/2026-06-25_LinuxBuildPrep/: README.md
Reviews/2026-06-25_LinuxBuildPrep/Callbacks/: Q001_C001_user.md  Q001_C002_user.md  Q001_C003_user.md
Reviews/2026-06-25_LinuxBuildPrep/Claud/: Q001_001_plan_and_boundary.md  Q001_005_p1_dropin.md  Q001_006_pch_framework_revision.md  Q001_007_debug_macro_in_framework.md  Q001_008_framework_applied_review.md  Q001_009_crtdbg_order_regression.md  Q001_010_p1_complete_verification.md  Q001_011_p2_cmake_draft.md  Q001_012_p2_windows_build_pass.md  Q001_013_close_and_output_standardize.md  Q001_014_cmake_linux_only_role.md  Q001_015_output_scheme_aligned.md
Reviews/2026-06-25_LinuxBuildPrep/Claud/artifacts/: 26.06.25.txt  CMakeLists.txt  CyphenBuild.props  commit_2_7.txt
Reviews/2026-06-25_LinuxBuildPrep/Decision/: Q001_decision.md
Reviews/2026-06-25_LinuxBuildPrep/Questions/: Q001.md
Reviews/2026-06-29_LinuxPorting/: README.md
Reviews/2026-06-29_LinuxPorting/Codex/: REVIEW.md
Reviews/2026-06-29_PathPlatformPath/: DECISION.md  README.md
Reviews/2026-06-29_PathPlatformPath/Claud/: REVIEW.md
Reviews/2026-06-29_PathPlatformPath/Claud/artifacts/: CANDIDATE_PATCH.md
Reviews/2026-06-29_PlatformPathContract/: DECISION.md  README.md
Reviews/2026-06-29_PlatformPathContract/Claud/: REVIEW.md
Reviews/2026-06-29_PlatformPathContract/Codex/: REVIEW.md
Reviews/2026-07-02_VulkanLinuxRenderer/: DECISION.md  README.md
Reviews/2026-07-02_VulkanLinuxRenderer/Claud/: REVIEW.md
Reviews/2026-07-02_VulkanLinuxRenderer/Claud/artifacts/: 3_4-linux-vulkan-first-light-patch.md
Reviews/2026-07-02_VulkanLinuxRenderer/Codex/: REVIEW.md
Reviews/2026-07-02_VulkanLinuxRenderer/Codex/artifacts/: first-patch-revision-launch-context.md  native-render-context-surface.patch
Reviews/_TEMPLATE/: DECISION.md  README.md
Reviews/_TEMPLATE/Claud/: .keep  REVIEW.md
Reviews/_TEMPLATE/Claud/artifacts/: .keep
Reviews/_TEMPLATE/Codex/: REVIEW.md
Reviews/_TEMPLATE/Codex/artifacts/: .keep
Reviews/_TEMPLATE/Questions/: Q001.md
UserSettings/: README.md
patches/: 3_4-vulkan-linux-so.patch
scripts/: Install-Wsl.ps1
